--- a/class/index.html
+++ b/class/index.html
@@ -459,6 +459,8 @@
                     </tr>
                 </tbody>
             </table>
+
+
                 <h2 class="mt50">훈련과정개요</h2>
                 <h3>가. 교과훈련시간</h3>
                 <table class="table table-bordered">
@@ -494,6 +496,8 @@
                             <th class="ce va">훈련시간</th>
                             <th class="ce va">비고</th>
                         </tr>
+                        </thead>
+                        <tbody>
                         <tr>
                             <th class="ce va" colspan="3">총계</th>
                             <th class="ce va">950</th>
