--- a/javascript/javascript01.html
+++ b/javascript/javascript01.html
@@ -5,10 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>자바스크립트 데이터저장하기</title>
-    <!--오후에 자바스크립트 수업을 했습니다-->
-    <!--오후에 자바스크립트 수업을 했습니다-->
-    <!--오후에 자바스크립트 수업을 했습니다-->
-    
+   
     <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
     <style>
         *{
@@ -55,6 +52,27 @@
             font-size: 18;
             line-height: 1.8;
         }
+        #plist{
+            padding: 2vw;
+            border-bottom: 1px dashed #cdcdcd;
+        }
+        #plist ul li a {
+        background-color: #000;
+        color: #fff;
+        padding: 5px 100px;
+        font-size: 18px;
+        }
+    
+
+        @media (max-width : 800px){
+            header h1{
+                font-size: 40px;
+            }
+            header nav ul li {
+                padding: 5px 10px;
+                font-size: 18px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -69,6 +87,12 @@
          </ul>
         </nav>
     </header>
+
+    <section id="plist">
+        <ul>
+            <li><a href="#">기본규칙</a></li>
+        </ul>
+    </section>
     <main id="main">
         <div class="list">
           <li>변수 : 데이터저장</li>
