--- a/javascript/javascript01.html
+++ b/javascript/javascript01.html
@@ -59,7 +59,7 @@
         #plist ul li a {
         background-color: #000;
         color: #fff;
-        padding: 5px 100px;
+        padding: 5px 10px;
         font-size: 18px;
         }
     
@@ -90,7 +90,7 @@
 
     <section id="plist">
         <ul>
-            <li><a href="#">기본규칙</a></li>
+            <li><a href="basic.html">기본규칙</a></li>
         </ul>
     </section>
     <main id="main">
