--- a/javascript/javascript01.html
+++ b/javascript/javascript01.html
@@ -15,7 +15,7 @@
     </h1>
     <nav class="header_nav">
         <ul>
-            <li><a href="javascript01.html">데이터 저장하기</a></li>
+            <li class="active"><a href="javascript01.html">데이터 저장하기</a></li>
             <li><a href="javascript02.html">데이터 불러오기</a></li>
             <li><a href="javascript03.html">데이터 실행하기</a></li>
             <li><a href="javascript.04.html">데이터 제어하기</a></li>
@@ -818,6 +818,21 @@
 
         document.querySelector(".sample15_result").innerHTML =  obj.a + "<br>" + obj.b[0] + "<br>" + obj.b[1] + "<br>"+ obj.c.x +"<br>"+ obj.c.y + "<br>"+obj.d+"<br>"
 
+    }
+    //16 객체:객체속의 변수
+    {
+        const a = 100;
+        const b = 200;
+        const c = "javascript";
+
+    }
+    //17 객체: 객체속의 함수
+    {
+        const obj = {
+            a : 100,
+            b : [200, 300],
+            c : {x:400, y:500},
+        }
     }
    
 </script>
