--- a/javascript/basic.html
+++ b/javascript/basic.html
@@ -1,99 +1,206 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>자바스크립트 기본규칙</title>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>자바스크립트 데이터 불러오기</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/dracula.css">
+</head>
+<body>
+  <header id="header">
+    <h1>
+        javascript
+    </h1>
+    <nav class="header_nav">
+        <ul>
+            <li><a href="javascript01.html">데이터 저장하기</a></li>
+            <li class="active"><a href="javascript02.html">데이터 불러오기</a></li>
+            <li><a href="javascript03.html">데이터 실행하기</a></li>
+            <li><a href="javascript.04.html">데이터 제어하기</a></li>
+        </ul>
+        <ul>
+            <li><a href="#">문자열 객체</a></li>
+            <li><a href="#">배열 객체</a></li>
+            <li><a href="#">수학 객체</a></li>
+            <li><a href="#">숫자객체</a></li>
+            <li><a href="#">브라우저 객체 </a></li>
+            <li><a href="#">요소 객체</a></li>
+            <li><a href="#">이벤트 객체</a></li>
+        </ul>
+        <ul class="study">
+            <li><a href="#">기본규칙</a></li>
+            <li><a href="#">기본명령어</a></li>
+            <li><a href="#">연산자</a></li>
+            <li><a href="#">기본명령어</a></li>
+        </ul>
+    </nav>
+  </header>  
+  <!-- //header -->
+  <main id="main">
+    <div class="main_menu"></div>
+    <ul>
+        <li><a href="#sample1">01.변수:데이터 저장</a></li>
+        <li><a href="#sample2">02.변수:데이터저장 데이터변경</a></li>
+        <li><a href="#sample3">03.변수:데이터저장 데이터변경 데이터추가</a></li>
+        <li><a href="#sample4">04.변수:지역변수 전역변수 매개변수</a></li>
+        <li><a href="#sample5">05.상수:데이터저장 데이터변경x</a></li>
+        <li><a href="#sample6">06.배열:데이터저장(여러개):표현방법1</a></li>
+        <li><a href="#sample7">07.배열:데이터저장(여러개):표현방법2</a></li>
+        <li><a href="#sample8">08.배열:데이터저장(여러개):표현방법3</a></li>
+        <li><a href="#sample9">09.배열:데이터저장(여러개):표현방법4</a></li>
+        <li><a href="#sample10">10.객체 : 데이터 저장(키와 값) : 표현 방법1</a></li>
+        <li><a href="#sample11">11.객체 : 데이터 저장(키와 값) : 표현 방법2</a></li>
+        <li><a href="#sample12">12.객체 : 데이터 저장(키와 값) : 표현 방법3</a></li>
+        <li><a href="#sample13">13.객체 : 데이터 저장(키와 값) : 표현 방법4</a></li>
+        <li><a href="#sample14">14.객체 : 데이터 저장(키와 값) : 표현 방법5</a></li>
+        <li><a href="#sample15">15.객체 : 데이터 저장(키와 값) : 표현 방법6</a></li>
+        <li><a href="#sample16">16.객체 : 데이터 저장(키와 값) : 표현 방법7</a></li>
+        <li><a href="#sample17">17.객체 : 데이터 저장(키와 값) : 표현 방법8</a></li>
+    </ul>
 
-        <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
-        <style>
-            /*리셋*/
-            * {
-                margin: 0;
-                padding: 0;
-                font-family: 'GmarketSans';
-            }
-            a {
-                text-decoration: none; 
-                color: #000;
-            }
-            li {
-                list-style: none;
-            }
-            #header {
-                padding: 2vw;
-                border-bottom: 1px dashed #cdcdcd;
-            }
-            #header h1 {
-                font-size: 8vw;
-                margin-bottom: 2vw;
-            }
-            #header nav ul li {
-                display: inline-block;
-            }
-            #header nav ul li {
-                border: 1px solid #000;
-                padding: 0.7vw 1vw  0.3vw 1vw;
-                transition: all 0.3s;
-                margin-bottom: 0.7vw;
-                display: inline-block;
-            }
-            #header nav ul li a:hover  {
-                background-color: #000;
-                color:#fff;
-            }
+    <div class="main_sample">
+        <div id="sample06" class="sample">
+            <h3>
+                06.
+            </h3>
+            <p>
+               0
+            </p>
+            <div class="script">
+<pre><code class="language-js"> {
+    const arr = [100, 200, 300, 400, 500, 600, 700, 800, 900];
 
-            /*컨텐츠 영역*/
-            #contents {
-                padding: 2vw;
-                border-bottom: 1px dashed #cdcdcd;
-            }
-            #contents h2 {
-                margin-bottom: 10px;
-            }
-            #contents .numList {}
-            #contents .numList {
-                margin-left: 30px;
-            }
-            #contents .numList li{
-                line-height: 1.6;
-                list-style: decimal-leading-zero;
-            }
+    document.wirite(arr[0],arr[1],arr[2],arr[3],arr[4],arr[5],arr[6],arr[7],arr[8])
+    document.wirite(arr[0,1,2,3,4,5,6,7,8])
+}
 
-            /*모바일 미디어쿼리*/
-            @media (max-width : 800px){
-                #header h1{
-                    font-size: 40px;
-                }
-                #header nav ul li {
-                    padding: 5px 10px;
-                    font-size: 18px;
-                }
-            }
-        </style>
-    </head>
-    <body>
-        <header id="header">
-            <h1>javascript</h1> 
-            <nav>
-             <ul>
-                 <li><a href="javascript01.html">데이터 저장하기</a></li>
-                 <li><a href="javascript02.html">데이터 출력하기</a></li>
-                 <li><a href="javascript03.html">데이터 실행하기</a></li>
-                 <li><a href="javascript04.html">데이터 제어하기</a></li>
-             </ul>
-            </nav>
-        </header>
-        <section id="contents">
-            <h2>자바스크립트 기본규칙</h2>
-            <ol class="numList">
-                <li>하나의 실행문이 끝나면 마지막에 세미콜론(;)을 붙여줍니다.
-                    세미콜론(;)을 붙여주지 않아도 됨.</li>
-                <li>대소문자를 구분합니다.</li>
-                <li>가독성을 위해 들여쓰기를 사용합니다.</li>
-                <li>주석(comment) 처리방법에는 한줄 주석 처리와 여러 줄 주석처리가 있습니다.</li>
-            </ol>
-        </section>
-        </body>
-    </html>
+</code></pre>
+            </div>
+            <div class="result">
+                <details>
+                    <summary>결과보기</summary>
+                    <div class="sample06_result">
+
+                    </div>
+                </details>
+            </div>
+        </div>
+        <!-- //sample06  -->
+
+    </div>
+
+  </main>
+
+  <!-- //main -->
+
+  <footer id="footer">
+    <a href="mailto:palepinkday@gmail.com">palepinkday@gmail.com</a>
+  </footer>
+
+<!-- footer -->
+
+<script src="assets/js/highlight.min.js"></script>
+<script>
+    hljs.highlightAll();
+</script>
+
+<script>
+    //01
+    {
+        // let x = 100;
+        // let y = 200;
+        // let z = "javascript";
+
+        let x = 100, 
+        y = 200, 
+        z = "javascript";
+
+        document.write(x)
+        document.write(y)
+        document.write(z)   
+    }
+    document.wirite("<br><br>");
+    //02
+    {
+        const x = 100,
+        y = 200,
+        z = "javascript";
+
+        document.write(x)
+        document.write(y)
+        document.write(z)
+    }
+    document.wirite("<br><br>");
+    //03
+    {
+        const arr = [100, 200, "javascript"];
+
+        //document.wirite(arr[0]);
+        //document.wirite(arr[1]);
+        //document.wirite(arr[2]);
+
+    }
+    document.wirite("<br><br>")
+    //04
+    {
+        const arr = [100, 200, ["javascript", "jquery"]]
+
+        //document.wirite(arr[0]);
+        //document.wirite(arr[1]);
+        //document.wirite(arr[2][0]);
+        //document.wirite(arr[2][1]);
+    }
+    document.wirite("<br><br>");
+    //05
+    {
+        const arr = [100, 200, "javaacript"] 
+
+        //document.wirite(arr.length);
+    }
+    document.wirite("<br><br>");
+    //06
+    {
+        const arr = [100, 200, 300, 400, 500];
+
+        // document.write(arr[0]);
+        // document.write(arr[1]);
+        // document.write(arr[2]);
+        // document.write(arr[3]);
+        // document.write(arr[4]);
+
+        //for(초기값,조건식,증감식)
+        for(let i = 0; i<arr.length; i++){
+            document.wirite(arr[i]);
+        }
+    }
+    document.wirite("<br><br>")
+
+    //07 forEach()
+    {
+        const num = [100, 200, 300, 400, 500]
+        //for문을 이용해서 출력
+        for( let i = 0; i<num.length; i++){
+            document.wirite(num.length);
+        }
+        //forEash()를 이용해서 출력-실행문<에 실행문:콜백함수
+        num.forEach(function(el){
+            document.wirite(el);
+        });
+     document.wirite("<br><br>")
+     
+        //forEach()3가지 인자(parameter)값
+        num.forEach(function(element,index,array){
+            document.wirite(element,"<br>");
+            document.wirite(index,"<br>");   
+            document.wirite(array,"<br>");
+        });
+    }
+
+
+
+</script>
+        
+</body>
+</html>
