--- a/javascript/javascript05.html
+++ b/javascript/javascript05.html
@@ -16,7 +16,7 @@
                 <li><a href="javascript01.html">데이터 저장하기</a></li>
                 <li><a href="javascript02.html">데이터 불러오기</a></li>
                 <li><a href="javascript03.html">데이터 실행하기</a></li>
-                <li class="active"><a href="javascript04.html">데이터 제어하기</a></li>
+                <li><a href="javascript04.html">데이터 제어하기</a></li>
             </ul>
             <ul>
                 <li><a href="javascript05.html">문자열 객체</a></li>
@@ -62,4 +62,3 @@
     <!-- //footer -->
 </body>
 </html>
-
