--- a/javascript/study/operator.html
+++ b/javascript/study/operator.html
@@ -36,21 +36,14 @@
     <!-- //header -->
 
     <main id="main">
-        <div class="main_menu"></div>
-        <ul>
-            <li><a href="#sampe">01. if문</a></li>
-            <li><a href="#sampe">02. </a></li>
-            <li><a href="#sampe">03</a></li>
-            <li><a href="#sampe">04</a></li>
-            <li><a href="#sampe">05</a></li>
-            <li><a href="#sampe">06</a></li>
-            <li><a href="#sampe">07</a></li>
-            <li><a href="#sampe">08</a></li>
-            <li><a href="#sampe">09</a></li>
-            <li><a href="#sampe">10</a></li>
-            <li><a href="#sampe">11. break문</a></li>
-            <li><a href="#sampe">12. continue문</a></li>
-        </ul>
+        <div class="doccument">
+            <h2 class="t_tit">자바스크립트 연산자</h2>
+            <p>
+            프로그램에
+            </p>
+        </div>
+        
+        
         <div class="main_script"></div>
         <div class="main_desc"></div>
     </main>
