--- a/javascript/javascript03.html
+++ b/javascript/javascript03.html
@@ -17,7 +17,7 @@
             <li><a href="javascript01.html">데이터 저장하기</a></li>
             <li><a href="javascript02.html">데이터 불러오기</a></li>
             <li class="active"><a href="javascript03.html">데이터 실행하기</a></li>
-            <li><a href="javascript.04.html">데이터 제어하기</a></li>
+            <li><a href="javascript04.html">데이터 제어하기</a></li>
         </ul>
         <ul>
             <li><a href="#">문자열 객체</a></li>
