--- a/javascript/javascript05.html
+++ b/javascript/javascript05.html
@@ -19,7 +19,7 @@
                 <li><a href="javascript04.html">데이터 제어하기</a></li>
             </ul>
             <ul>
-                <li><a href="javascript05.html">문자열 객체</a></li>
+                <li class="active"><a href="javascript05.html">문자열 객체</a></li>
                 <li><a href="javascript06.html">배열 객체</a></li>
                 <li><a href="javascript07.html">수학 객체</a></li>
                 <li><a href="javascript08.html">숫자 객체</a></li>
