--- a/javascript/javascript11.html
+++ b/javascript/javascript11.html
@@ -25,7 +25,7 @@
                 <li><a href="javascript08.html">숫자 객체</a></li>
                 <li><a href="javascript09.html">브라우저 객체</a></li>
                 <li><a href="javascript10.html">요소 객체</a></li>
-                <li><a href="javascript11.html">이벤트 객체</a></li>
+                <li class="active"><a href="javascript11.html">이벤트 객체</a></li>
             </ul>
             <ul class="study">
                 <li><a href="study/basic.html">기본 규칙</a></li>
