--- a/javascript/study/basic.html
+++ b/javascript/study/basic.html
@@ -41,12 +41,12 @@
             <h2 class="t_tit">기본 규칙</h2>
             <p class="t_desc">
                 자바스크립트를 다루기 위해서는 기초적인 특징과 기본 문법이 있습니다.
-                가장 기본이기 때문에 이 부분을 숙지하고 자바스크립트를 <em>공부</em>하세요!
+                가장 기본이기 때문에 이 부분을 숙지하고 자바스크립트를 <i>공부</i>하세요!
             </p>
 
             <h3 class="t_tit2">자바스크립트란?</h3>
             <p class="t_desc2">
-                JavaScript는 웹 페이지에서 복잡한 기능을 구현할 수 있도록 하는 스크립트 <em>프로그래밍 언어</em>입니다.
+                JavaScript는 웹 페이지에서 복잡한 기능을 구현할 수 있도록 하는 스크립트 <i>프로그래밍 언어</i>입니다.
                 HTML은 정적인 레이아웃을 표현한다면, 자바스크립트는 동적인 기능을 표현합니다.
             </p>
             <p class="t_desc">
@@ -60,6 +60,11 @@
                 하나의 실행문이 끝나면 마지막에 세미콜론(;)을 붙여 줍니다.
                 세미콜론(;)을 붙여 주지 않아도 상관은 없습니다.
             </p>
+            <div class ="t_box">
+                var num = 5;<i>;</i><br>
+                <doccument.write(num)<i>;</i><br>
+
+            </div>
 
             <h4 class="t_tit3">2. 대소문자</h4>
             <p class="t_desc">
@@ -69,7 +74,7 @@
 
             <h4 class="t_tit3">3. 들여쓰기</h4>
             <p class="t_desc">
-                자바스크립트는 가독성을 위하여 <em>들여쓰기</em>를 사용합니다.
+                자바스크립트는 가독성을 위하여 <i>들여쓰기</i>를 사용합니다.
             </p>
 
             <h4 class="t_tit3">4. 주석</h4>
@@ -78,6 +83,74 @@
                 특정한 부분의 코드가 실행되지 않도록 사용합니다.
                 주석 표시는 프로그램에 영향을 미치지 않습니다.
             </p>
+            <hr>
+            <h3 class ="t_tit2">출력하는 방법</h3>
+            <p class="t_desc">
+
+            </p>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                </thead>
+                    <tbody>
+                    <tr>
+                        <td class="ce">입력</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td class="ce" rowspan="3">출력</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>출력</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>출력</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>확인</td>
+                        <td></td>
+                    </tr>
+                    </tbody>
+                <colgroup>
+                <col>
+            </colgroup>
+            </table>
+
+            <hr>
+            <h3 class ="t_tit2">자바스크립트 사용 방법</h3>
+            <p class="t_desc">
+                자바스크립트 사용방법은 
+                1. 외부파일 연결하는 방법
+                2. 스크립트 태그에 사용하는 방법
+                3.태그에 직접 기술하는 방법
+            </p>
+<div class="t_code">
+    <pre><code>
+        &lt;!DOCTYPE html&gt;
+&lt;html lang="ko"&gt;
+&lt;head&gt;
+    &lt;meta charset="UTF-8"&gt;
+    &lt;title&gt;Javasript&lt;/title&gt;
+    &lt;!-- 1. 외부 파일로 로드하는 방법 --&gt;
+    &lt;script type="text/Javasript" src="js/script.js"&gt;&lt;/script&gt;
+    &lt;!-- 2. script 태그 사이에 기술하는 방법 --&gt;
+    &lt;script&gt;
+        document.write("Javasript");
+    &lt;/script&gt;
+&lt;/head&gt;
+&lt;body&gt;
+    &lt;!-- 3. 태그에 직접 기술하는 방법 --&gt;
+    &lt;a href="#" onclick="alert('Javasript')"&gt;&lt;/a&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+    </code></pre>
+</div>
         </div>
     </main>
     <!-- //main -->
