--- a/javascript/study/basic.html
+++ b/javascript/study/basic.html
@@ -41,7 +41,6 @@
             <h2 class="t_tit">기본 규칙</h2>
             <p class="t_desc">
                 자바스크립트를 다루기 위해서는 기초적인 특징과 기본 문법이 있습니다.
-                가장 기본이기 때문에 이 부분을 숙지하고 자바스크립트를 <i>공부</i>하세요!
             </p>
 
             <h3 class="t_tit2">자바스크립트란?</h3>
@@ -62,8 +61,7 @@
             </p>
             <div class ="t_box">
                 var num = 5;<i>;</i><br>
-                <doccument.write(num)<i>;</i><br>
-
+                doccument.write(num)<i>;</i><br>
             </div>
 
             <h4 class="t_tit3">2. 대소문자</h4>
@@ -84,43 +82,48 @@
                 주석 표시는 프로그램에 영향을 미치지 않습니다.
             </p>
             <hr>
-            <h3 class ="t_tit2">출력하는 방법</h3>
-            <p class="t_desc">
+            <h3 class="t_tit2">출력하는 방법</h3>
+            <h4 class="t_tit3"> 1.HTML문서 내부에서 적용할 수 있습니다.</h4>
+            <h4 class="t_tit3"> 1.HTML문서 외부에서 적용할 수 있습니다.</h4>
 
-            </p>
-            <table class="table">
+            <h3 class ="t_tit2">적용 위치</h3>
+            <h4 class="t_tit3">
+               1.&lt;head&gt;태그 내에 위치할 수 있다.
+            </h4>
+            <h4 class="t_tit3">
+                2.&lt;/body&gt;태그위에 위치할 수 있다.
+            </h4>
+            <h3 class ="t_tit2">기본 명령어</h3>
+            <table class="t_table">
                 <thead>
                     <tr>
-                        <th></th>
-                        <th></th>
-                    </tr>
+                    <td>분류</td>
+                    <td>메서드</td>
+                   </tr>
                 </thead>
-                    <tbody>
+                 <tbody> 
                     <tr>
                         <td class="ce">입력</td>
-                        <td></td>
+                        <td class="ce">prompt()</td>
                     </tr>
                     <tr>
                         <td class="ce" rowspan="3">출력</td>
-                        <td></td>
+                        <td class="ce">document.write()</td>
                     </tr>
                     <tr>
-                        <td>출력</td>
-                        <td></td>
+                        <td class="ce">alert()</td>
                     </tr>
                     <tr>
-                        <td>출력</td>
-                        <td></td>
+                        <td class="ce">console.log()</td>
                     </tr>
                     <tr>
-                        <td>확인</td>
-                        <td></td>
-                    </tr>
-                    </tbody>
-                <colgroup>
-                <col>
-            </colgroup>
+                        <td class="ce">확인</td>
+                        <td class="ce">confirm()</td>
+                    </tr>   
+                </tbody>    
             </table>
+
+                
 
             <hr>
             <h3 class ="t_tit2">자바스크립트 사용 방법</h3>
