--- a/javascript/javascript02.html
+++ b/javascript/javascript02.html
@@ -70,11 +70,46 @@
             </p>
             <div class="script">
 <pre><code class="language-js"> {
-    const arr = [100, 200, 300, 400, 500, 600, 700, 800, 900];
+    const arr = [100, 200, 300, 400, 500];
 
-    document.wirite(arr[0],arr[1],arr[2],arr[3],arr[4],arr[5],arr[6],arr[7],arr[8])
-    document.wirite(arr[0,1,2,3,4,5,6,7,8])
+    // document.write(arr[0]);
+    // document.write(arr[1]);
+    // document.write(arr[2]);
+    // document.write(arr[3]);
+    // document.write(arr[4]);
+
+    //for(초기값,조건식,증감식)
+    for(let i = 0; i<arr.length; i++){
+        document.wirite(arr[i]);
+    }
 }
+document.wirite("<br><br>")
+
+
+
+{
+    const num = [100, 200, 300, 400, 500]
+    //for문을 이용해서 출력
+    for( let i = 0; i<num.length; i++){
+        document.wirite(num.length);
+    }
+    //forEash()를 이용해서 출력-실행문<에 실행문:콜백함수
+    num.forEach(function(el){
+        document.wirite(el);
+    });
+ document.wirite("<br><br>")
+ 
+    //forEach()3가지 인자(parameter)값
+    num.forEach(function(element,index,array){
+        document.wirite(element,"<br>");
+        document.wirite(index,"<br>");   
+        document.wirite(array,"<br>");
+    });
+}
+
+
+
+
 
 </code></pre>
             </div>
