--- a/javascript/javascript02.html
+++ b/javascript/javascript02.html
@@ -4,238 +4,364 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자바스크립트 데이터 불러오기</title>
+    <title>자바스크립트 : 데이터 불러오기</title>
+
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/dracula.css">
 </head>
 <body>
-  <header id="header">
-    <h1>
-        javascript
-    </h1>
-    <nav class="header_nav">
-        <ul>
-            <li><a href="javascript01.html">데이터 저장하기</a></li>
-            <li class="active"><a href="javascript02.html">데이터 불러오기</a></li>
-            <li><a href="javascript03.html">데이터 실행하기</a></li>
-            <li><a href="javascript.04.html">데이터 제어하기</a></li>
-        </ul>
-        <ul>
-            <li><a href="#">문자열 객체</a></li>
-            <li><a href="#">배열 객체</a></li>
-            <li><a href="#">수학 객체</a></li>
-            <li><a href="#">숫자객체</a></li>
-            <li><a href="#">브라우저 객체 </a></li>
-            <li><a href="#">요소 객체</a></li>
-            <li><a href="#">이벤트 객체</a></li>
-        </ul>
-        <ul class="study">
-            <li><a href="#">기본규칙</a></li>
-            <li><a href="#">기본명령어</a></li>
-            <li><a href="#">연산자</a></li>
-            <li><a href="#">기본명령어</a></li>
-        </ul>
-    </nav>
-  </header>  
-  <!-- //header -->
-  <main id="main">
-    <div class="main_menu"></div>
-    <ul>
-        <li><a href="#sample1">01.변수:데이터 저장</a></li>
-        <li><a href="#sample2">02.변수:데이터저장 데이터변경</a></li>
-        <li><a href="#sample3">03.변수:데이터저장 데이터변경 데이터추가</a></li>
-        <li><a href="#sample4">04.변수:지역변수 전역변수 매개변수</a></li>
-        <li><a href="#sample5">05.상수:데이터저장 데이터변경x</a></li>
-        <li><a href="#sample6">06.배열:데이터저장(여러개):표현방법1</a></li>
-        <li><a href="#sample7">07.배열:데이터저장(여러개):표현방법2</a></li>
-        <li><a href="#sample8">08.배열:데이터저장(여러개):표현방법3</a></li>
-        <li><a href="#sample9">09.배열:데이터저장(여러개):표현방법4</a></li>
-        <li><a href="#sample10">10.객체 : 데이터 저장(키와 값) : 표현 방법1</a></li>
-        <li><a href="#sample11">11.객체 : 데이터 저장(키와 값) : 표현 방법2</a></li>
-        <li><a href="#sample12">12.객체 : 데이터 저장(키와 값) : 표현 방법3</a></li>
-        <li><a href="#sample13">13.객체 : 데이터 저장(키와 값) : 표현 방법4</a></li>
-        <li><a href="#sample14">14.객체 : 데이터 저장(키와 값) : 표현 방법5</a></li>
-        <li><a href="#sample15">15.객체 : 데이터 저장(키와 값) : 표현 방법6</a></li>
-        <li><a href="#sample16">16.객체 : 데이터 저장(키와 값) : 표현 방법7</a></li>
-        <li><a href="#sample17">17.객체 : 데이터 저장(키와 값) : 표현 방법8</a></li>
-    </ul>
+    <header id="header">
+        <h1><a href="index.html">Javascript</a></h1>
+        <nav class="header_nav">
+            <ul>
+                <li><a href="javascript01.html">데이터 저장하기</a></li>
+                <li class="active"><a href="javascript02.html">데이터 불러오기</a></li>
+                <li><a href="javascript03.html">데이터 실행하기</a></li>
+                <li><a href="javascript04.html">데이터 제어하기</a></li>
+            </ul>
+            <ul>
+                <li><a href="javascript05.html">문자열 객체</a></li>
+                <li><a href="javascript06.html">배열 객체</a></li>
+                <li><a href="javascript07.html">수학 객체</a></li>
+                <li><a href="javascript08.html">숫자 객체</a></li>
+                <li><a href="javascript09.html">브라우저 객체</a></li>
+                <li><a href="javascript10.html">요소 객체</a></li>
+                <li><a href="javascript11.html">이벤트 객체</a></li>
+            </ul>
+            <ul class="study">
+                <li><a href="study/basic.html">기본 규칙</a></li>
+                <li><a href="study/operator.html">연산자</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- //header -->
 
-    <div class="main_sample">
-        <div id="sample06" class="sample">
-            <h3>
-                06.
-            </h3>
-            <p>
-               0
-            </p>
-            <div class="script">
-<pre><code class="language-js"> {
-    const arr = [100, 200, 300, 400, 500];
-
-    // document.write(arr[0]);
-    // document.write(arr[1]);
-    // document.write(arr[2]);
-    // document.write(arr[3]);
-    // document.write(arr[4]);
-
-    //for(초기값,조건식,증감식)
-    for(let i = 0; i<arr.length; i++){
-        document.wirite(arr[i]);
-    }
-}
-document.wirite("<br><br>")
-
-
-
-{
-    const num = [100, 200, 300, 400, 500]
-    //for문을 이용해서 출력
-    for( let i = 0; i<num.length; i++){
-        document.wirite(num.length);
-    }
-    //forEash()를 이용해서 출력-실행문<에 실행문:콜백함수
-    num.forEach(function(el){
-        document.wirite(el);
-    });
- document.wirite("<br><br>")
- 
-    //forEach()3가지 인자(parameter)값
-    num.forEach(function(element,index,array){
-        document.wirite(element,"<br>");
-        document.wirite(index,"<br>");   
-        document.wirite(array,"<br>");
-    });
-}
-
-
-
-
-
-</code></pre>
-            </div>
-            <div class="result">
-                <details>
-                    <summary>결과보기</summary>
-                    <div class="sample06_result">
-
-                    </div>
-                </details>
-            </div>
+    <main id="main">
+        <div class="main_menu">
+            <ul>
+                <li><a href="#sample01">01. 변수 : 데이터 불러오기</a></li>
+                <li><a href="#sample02">02. 상수 : 데이터 불러오기</a></li>
+                <li><a href="#sample03">03. 배열 : 데이터 불러오기</a></li>
+                <li><a href="#sample04">04. 배열 : 데이터 불러오기 : 2차 배열</a></li>
+                <li><a href="#sample05">05. 배열 : 데이터 불러오기 : 갯수 구하기</a></li>
+                <li><a href="#sample06">06. 배열 : 데이터 불러오기 : for()문</a></li>
+                <li><a href="#sample07">07. 배열 : 데이터 불러오기 : forEach()</a></li>
+                <li><a href="#sample08">08. 배열 : 데이터 불러오기 : for of</a></li>
+                <li><a href="#sample09">09. 배열 : 데이터 불러오기 : for in</a></li>
+                <li><a href="#sample10">10. 배열 : 데이터 불러오기 : map()</a></li>
+                <li><a href="#sample11">11. 배열 : 데이터 불러오기 : 펼침연산자</a></li>
+                <li><a href="#sample12">12. 배열 : 데이터 불러오기 : 배열구조분해할당</a></li>
+                <li><a href="#sample13">13. 객체 : 데이터 불러오기 : 기본</a></li>
+                <li><a href="#sample14">14. 객체 : 데이터 불러오기 : Object</a></li>
+                <li><a href="#sample15">15. 객체 : 데이터 불러오기 : 변수</a></li>
+                <li><a href="#sample16">16. 객체 : 데이터 불러오기 : for in</a></li>
+                <li><a href="#sample17">17. 객체 : 데이터 불러오기 : map()</a></li>
+                <li><a href="#sample18">18. 객체 : 데이터 불러오기 : hasOwnProperty()</a></li>
+                <li><a href="#sample19">19. 객체 : 데이터 불러오기 : 펼침연산자 - 복사</a></li>
+                <li><a href="#sample20">20. 객체 : 데이터 불러오기 : 펼침연산자 - 추가</a></li>
+                <li><a href="#sample21">21. 객체 : 데이터 불러오기 : 펼침연산자 - 결합</a></li>
+                <li><a href="#sample22">22. 객체 : 데이터 불러오기 : 비구조화 할당</a></li>
+                <li><a href="#sample23">23. 객체 : 데이터 불러오기 : 객체구조분해할당</a></li>
+            </ul>
         </div>
-        <!-- //sample06  -->
+        <div class="main_sample">
+            <div id="sample01" class="sample">
+                <h3>01. 변수 : 데이터 불러오기</h3>
+                <p>변수에 값을 불러옵니다.</p>
+                <div class="script">
+<pre><code class="language-js">let x = 100, 
+     y = 200, 
+     z = "javascript";
 
-    </div>
+document.write(x);
+document.write(y);
+document.write(z);
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample01_result">
+                            100<br>200<br>javascript
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample01 -->
 
-  </main>
+            <div id="sample02" class="sample">
+                <h3>02. 상수 : 데이터 불러오기</h3>
+                <p>상수에 값을 불러옵니다. 상수는 const라고 표기합니다.</p>
+                <div class="script">
+<pre><code class="language-js">const x = 100, 
+         y = 200, 
+         z = "javascript";
 
-  <!-- //main -->
+document.write(x);
+document.write(y);
+document.write(z);
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample02_result">
+                            100<br>200<br>javascript
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample02 -->
 
-  <footer id="footer">
-    <a href="mailto:palepinkday@gmail.com">palepinkday@gmail.com</a>
-  </footer>
+            <div id="sample03" class="sample">
+                <h3>03. 배열 : 데이터 불러오기</h3>
+                <p>배열에 데이터 값을 불러옵니다.</p>
+                <div class="script">
+<pre><code class="language-js">const arr = [100, 200, "javascript"];
 
-<!-- footer -->
+document.write(arr[0]);
+document.write(arr[1]);
+document.write(arr[2]);
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="result">
+                            100<br>200<br>javascript
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample03 -->
 
-<script src="assets/js/highlight.min.js"></script>
-<script>
-    hljs.highlightAll();
-</script>
+            <div id="sample04" class="sample">
+                <h3>04. 배열 : 데이터 불러오기 : 2차 배열</h3>
+                <p>배열 속에 배열이 있는 2차 구조에서 데이터를 불러옵니다.</p>
+                <div class="script">
+<pre><code class="language-js">const arr = [100, 200, ["javascript", "jquery"]];
 
-<script>
-    //01
-    {
-        // let x = 100;
-        // let y = 200;
-        // let z = "javascript";
+document.write(arr[0]);
+document.write(arr[1]);
+document.write(arr[2]);
+document.write(arr[2][0]);
+document.write(arr[2][1]);
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="result">
+                            100<br>
+                            200<br>
+                            javascript,jquery<br>
+                            javascript<br>
+                            jquery
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample04 -->
 
-        let x = 100, 
-        y = 200, 
-        z = "javascript";
+            <div id="sample05" class="sample">
+                <h3>05. 배열 : 데이터 불러오기 : 갯수 구하기</h3>
+                <p>배열 데이터 값의 갯수를 가져옵니다.</p>
+                <div class="script">
+<pre><code class="language-js">const arr = [100, 200, "javascript"];
 
-        document.write(x)
-        document.write(y)
-        document.write(z)   
-    }
-    document.wirite("<br><br>");
-    //02
-    {
-        const x = 100,
-        y = 200,
-        z = "javascript";
+document.write(arr.length);
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="result">
+                            3
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample05 -->
 
-        document.write(x)
-        document.write(y)
-        document.write(z)
-    }
-    document.wirite("<br><br>");
-    //03
-    {
-        const arr = [100, 200, "javascript"];
+            <div id="sample06" class="sample">
+                <h3>06. 배열 : 데이터 불러오기 : for()문</h3>
+                <p>배열 데이터 값을 반복문을 사용하여 가져옵니다.</p>
+                <div class="script">
+<pre><code class="language-js">const arr = [100, 200, 300, 400, 500];
 
-        //document.wirite(arr[0]);
-        //document.wirite(arr[1]);
-        //document.wirite(arr[2]);
+// document.write(arr[0])
+// document.write(arr[1])
+// document.write(arr[2])
+// document.write(arr[3])
+// document.write(arr[4])
 
-    }
-    document.wirite("<br><br>")
-    //04
-    {
-        const arr = [100, 200, ["javascript", "jquery"]]
+//for(초기값, 조건식, 증감식)
+for( let i=0; i&lt;arr.length; i++ ){
+    document.write(arr[i]);
+}
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="result">
+                            100<br>
+                            200<br>
+                            300<br>
+                            400<br>
+                            500
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample06 -->
 
-        //document.wirite(arr[0]);
-        //document.wirite(arr[1]);
-        //document.wirite(arr[2][0]);
-        //document.wirite(arr[2][1]);
-    }
-    document.wirite("<br><br>");
-    //05
-    {
-        const arr = [100, 200, "javaacript"] 
+            <div id="sample07" class="sample">
+                <h3>07. 배열 : 데이터 불러오기 : forEach()</h3>
+                <p>배열 데이터 값을 반복문을 사용하여 가져옵니다.</p>
+                <div class="script">
+<pre><code class="language-js">const num = [100, 200, 300, 400, 500];
 
-        //document.wirite(arr.length);
-    }
-    document.wirite("<br><br>");
-    //06
-    {
-        const arr = [100, 200, 300, 400, 500];
+document.write(num[0]);
+document.write(num[1]);
+document.write(num[2]);
+document.write(num[3]);
+document.write(num[4]);
 
-        // document.write(arr[0]);
-        // document.write(arr[1]);
-        // document.write(arr[2]);
-        // document.write(arr[3]);
-        // document.write(arr[4]);
+//for문
+for( i=0; i&lt;num.length; i++ ){
+    document.write(num[i]);
+}
 
-        //for(초기값,조건식,증감식)
-        for(let i = 0; i<arr.length; i++){
-            document.wirite(arr[i]);
-        }
-    }
-    document.wirite("<br><br>")
+//forEach()
+num.forEach(function(el){
+    document.write(el);
+});
 
-    //07 forEach()
-    {
-        const num = [100, 200, 300, 400, 500]
-        //for문을 이용해서 출력
-        for( let i = 0; i<num.length; i++){
-            document.wirite(num.length);
-        }
-        //forEash()를 이용해서 출력-실행문<에 실행문:콜백함수
-        num.forEach(function(el){
-            document.wirite(el);
-        });
-     document.wirite("<br><br>")
-     
-        //forEach()3가지 인자(parameter)값
-        num.forEach(function(element,index,array){
-            document.wirite(element,"<br>");
-            document.wirite(index,"<br>");   
-            document.wirite(array,"<br>");
-        });
-    }
+//forEach(element, index, array)
+num.forEach(function(element, index, array){
+    document.write(element);
+    document.write(index);
+    document.write(array);
+});
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="result">
+                            100 200 300 400 500<br>
+                            100 200 300 400 500<br>
+                            100 200 300 400 500<br>
+                            100 0 100,200,300,400,500<br>
+                            200 1 100,200,300,400,500<br>
+                            300 2 100,200,300,400,500<br>
+                            400 3 100,200,300,400,500<br>
+                            500 4 100,200,300,400,500
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample07 -->
 
+            <div id="sample08" class="sample">
+                <h3>08. 배열 : 데이터 불러오기 : for of</h3>
+                <p>배열 데이터 값을 반복문을 사용하여 가져옵니다.</p>
+                <div class="script">
+<pre><code class="language-js">const num = [100, 200, 300, 400, 500];
 
+for( let i of num ){
+    document.write(i);
+}
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="result">
+                            100 200 300 400 500
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample08 -->
 
-</script>
+            <div id="sample09" class="sample">
+                <h3>09. 배열 : 데이터 불러오기 : for in</h3>
+                <p>배열 데이터 값을 반복문을 사용하여 가져옵니다.</p>
+                <div class="script">
+<pre><code class="language-js">const num = [100, 200, 300, 400, 500];
+
+for( let i in num ){
+    document.write(i);
+}
+
+for( let i in num ){
+    document.write(num[i]);
+}
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="result">
+                            0 1 2 3 4 <br>
+                            100 200 300 400 500
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample09 -->
+
+            <div id="sample10" class="sample">
+                <h3>10. 배열 : 데이터 불러오기 : map()</h3>
+                <p>배열 데이터 값을 반복문을 사용하여 가져옵니다.</p>
+                <div class="script">
+<pre><code class="language-js">const num = [100, 200, 300, 400, 500];
+
+//map()
+num.map(functionel(el){
+    document.write(el);
+});
+
+//map(element, index, array)
+num.map(function(element, index, array){
+    document.write(element);
+    document.write(index);
+    document.write(array);
+});
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="result">
+                            100 200 300 400 500<br>
+                            100 0 100,200,300,400,500<br>
+                            200 1 100,200,300,400,500<br>
+                            300 2 100,200,300,400,500<br>
+                            400 3 100,200,300,400,500<br>
+                            500 4 100,200,300,400,500
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample10 -->
+        </div>
+    </main>
+    <!-- //main -->
+
+    <footer id="footer">
+        <a href="mailto:webstoryboy@naver.com">webstoryboy@naver.com</a>
+    </footer>
+    <!-- //footer -->
+
+    <script src="assets/js/highlight.min.js"></script>
+    <script>
+        hljs.highlightAll();
+    </script>
+    <script>
         
+    </script>
 </body>
 </html>
