--- a/html/index.html
+++ b/html/index.html
@@ -64,9 +64,12 @@
         <h1>HTML<em>레퍼런스 북</em></h1>
         <nav>
             <ul>
-                <li><a href="basic.html">기초</a></li>
+                <li><a href="basic.html">기초문법</a></li>
                 <li><a href="basic.html">주제</a></li>
                 <li><a href="basic.html">알파벳</a></li>
+                <li><a href="basic.html">기초</a></li>
+                <li><a href="basic.html">주제</a></li>
+               
             </ul>
         </nav>
     </main>
