--- a/javascript/javascript02.html
+++ b/javascript/javascript02.html
@@ -352,7 +352,7 @@ num.map(function(element, index, array){
     <!-- //main -->
 
     <footer id="footer">
-        <a href="mailto:webstoryboy@naver.com">webstoryboy@naver.com</a>
+        <a href="mailto:palepinkday@gmail.com">palepinkday@gmail.com</a>
     </footer>
     <!-- //footer -->
 
