--- a/javascript/javascript03.html
+++ b/javascript/javascript03.html
@@ -75,7 +75,7 @@
 <!-- //main -->
 
 <footer id="footer">
-<a href="mailto:webstoryboy@naver.com">webstoryboy@naver.com</a>
+<a href="mailto:palepinkday@gmail.com">palepinkday@gmail.com</a>
 </footer>
 <!-- //footer -->
 </body>
