--- a/javascript/javascript04.html
+++ b/javascript/javascript04.html
@@ -39,15 +39,15 @@
         <div class="main_menu"></div>
         <ul>
             <li><a href="#sampe">01. if문</a></li>
-            <li><a href="#sampe">02. </a></li>
-            <li><a href="#sampe">03</a></li>
-            <li><a href="#sampe">04</a></li>
-            <li><a href="#sampe">05</a></li>
-            <li><a href="#sampe">06</a></li>
-            <li><a href="#sampe">07</a></li>
-            <li><a href="#sampe">08</a></li>
-            <li><a href="#sampe">09</a></li>
-            <li><a href="#sampe">10</a></li>
+            <li><a href="#sampe">02. if문 생략 </a></li>
+            <li><a href="#sampe">03. 다중 if</a></li>
+            <li><a href="#sampe">04. 중첩 if</a></li>
+            <li><a href="#sampe">05. 삼항 연산자</a></li>
+            <li><a href="#sampe">06. swith문</a></li>
+            <li><a href="#sampe">07. whild문</a></li>
+            <li><a href="#sampe">08. do whild문</a></li>
+            <li><a href="#sampe">09. for문</a></li>
+            <li><a href="#sampe">10. 중첩 for문</a></li>
             <li><a href="#sampe">11. break문</a></li>
             <li><a href="#sampe">12. continue문</a></li>
         </ul>
