--- a/javascript/study/basic.html
+++ b/javascript/study/basic.html
@@ -159,7 +159,7 @@
     <!-- //main -->
 
     <footer id="footer">
-        <a href="mailto:webstoryboy@naver.com">webstoryboy@naver.com</a>
+        <a href="mailto:palepinkday@gmail.com">palepinkday@gmail.com</a>
     </footer>
     <!-- //footer -->
 
