--- a/javascript/study/basic.html
+++ b/javascript/study/basic.html
@@ -97,8 +97,8 @@
             <table class="t_table">
                 <thead>
                     <tr>
-                    <td>분류</td>
-                    <td>메서드</td>
+                    <td class="ce">분류</td>
+                    <td class="ce">메서드</td>
                    </tr>
                 </thead>
                  <tbody> 
