--- a/javascript/index.html
+++ b/javascript/index.html
@@ -448,7 +448,18 @@
             left: 15%;
             border-radius: 50%;
         }
+
+        @media (max-height: 700px){
+            main::before {
+                display: none;
+            }
+        }
+            
         @media (max-width: 800px) {
+            main{
+                min-height: 700px;
+            }
+
             h1{
                 font-size: 40px;
             }
@@ -534,6 +545,15 @@
                 <li><a href="javascript09.html">브라우저 객체</a></li>
                 <li><a href="javascript10.html">요소 객체</a></li>
                 <li><a href="javascript11.html">이벤트 객체</a></li>
+            </ul>
+            <ul class="study">
+                <li><a href="study/basic.html">기본 규칙</a></li>
+                <li><a href="study/operator.html">연산자</a></li>
+                <li><a href="study/for.html">반목문</a></li>
+                <li><a href="study/if.html">조건문</a></li>
+                <li><a href="study/type.html">데이터타입</a></li>
+                <li><a href="study/fuction.html">함수</a></li>
+                <li><a href="study/var.html">지역변수/전역변수</a></li>
             </ul>
         </nav>
     </main>
