--- a/javascript/study/for.html
+++ b/javascript/study/for.html
@@ -15,24 +15,28 @@
     </h1>
     <nav class="header_nav">
         <ul>
-            <li><a href="javascript01.html">데이터 저장하기</a></li>
-            <li class="active"><a href="javascript02.html">데이터 불러오기</a></li>
-            <li><a href="javascript03.html">데이터 실행하기</a></li>
-            <li><a href="javascript.04.html">데이터 제어하기</a></li>
+            <li><a href="../javascript01.html">데이터 저장하기</a></li>
+            <li><a href="../javascript02.html">데이터 불러오기</a></li>
+            <li><a href="../javascript03.html">데이터 실행하기</a></li>
+            <li><a href="../javascript.04.html">데이터 제어하기</a></li>
         </ul>
         <ul>
-            <li><a href="#">문자열 객체</a></li>
-            <li><a href="#">배열 객체</a></li>
-            <li><a href="#">수학 객체</a></li>
-            <li><a href="#">숫자객체</a></li>
-            <li><a href="#">브라우저 객체 </a></li>
-            <li><a href="#">요소 객체</a></li>
-            <li><a href="#">이벤트 객체</a></li>
+            <li><a href="../javascript05.html">문자열 객체</a></li>
+            <li><a href="../javascript06.html">배열 객체</a></li>
+            <li><a href="../javascript07.html">수학 객체</a></li>
+            <li><a href="../javascript08.html">숫자객체</a></li>
+            <li><a href="../javascript09.html">브라우저 객체 </a></li>
+            <li><a href="../javascript10.html">요소 객체</a></li>
+            <li><a href="../javascript11.html">이벤트 객체</a></li>
         </ul>
         <ul class="study">
-            <li><a href="#">기본규칙</a></li>
-            <li><a href="#">연산자</a></li>
-            <li><a href="#">for문</a></li>
+            <li><a href="basic.html">기본 규칙</a></li>
+            <li><a href="operator.html">연산자</a></li>
+            <li><a href="for.html">반목문</a></li>
+            <li><a href="if.html">조건문</a></li>
+            <li><a href="type.html">데이터타입</a></li>
+            <li><a href="fuction.html">함수</a></li>
+            <li><a href="var.html">지역변수/전역변수</a></li>
         </ul>
     </nav>
   </header>  
