--- a/javascript/study/operator.html
+++ b/javascript/study/operator.html
@@ -31,6 +31,11 @@
             <ul class="study">
                 <li><a href="basic.html">기본 규칙</a></li>
                 <li><a href="operator.html">연산자</a></li>
+                <li><a href="for.html">반목문</a></li>
+                <li><a href="if.html">조건문</a></li>
+                <li><a href="type.html">데이터타입</a></li>
+                <li><a href="fuction.html">함수</a></li>
+                <li><a href="var.html">지역변수/전역변수</a></li>
             </ul>
         </nav>
     </header>
